--- a/nodejs-under-the-hoods-concurrency-and-multithreading/package.json
+++ b/nodejs-under-the-hoods-concurrency-and-multithreading/package.json
@@ -7,5 +7,8 @@
     "express": "^4.17.1",
     "lodash": "^4.17.15",
     "pg": "^7.18.1"
+  },
+  "scripts": {
+    "start": "node ./src/index.js"
   }
 }
