--- a/nodejs-under-the-hoods-concurrency-and-multithreading/package.json
+++ b/nodejs-under-the-hoods-concurrency-and-multithreading/package.json
@@ -9,6 +9,7 @@
     "pg": "^7.18.1"
   },
   "scripts": {
-    "start": "node ./src/index.js"
+    "start": "node ./src/single.js",
+    "cluster": "node ./src/cluster.js"
   }
 }
