--- a/nodejs-under-the-hoods-concurrency-and-multithreading/package.json
+++ b/nodejs-under-the-hoods-concurrency-and-multithreading/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "lodash": "^4.17.15",
-    "pg": "^7.18.1"
+    "pg": "^7.18.1",
+    "pg-pool": "^2.0.10"
   },
   "scripts": {
     "start": "node ./src/single.js",
